Add print support for report charts

On a printed chart, the print date and the file from which the
report was generated are added.

BUG:405061
FIXED-IN:4.8.4